--- a/packages/layout/package.json
+++ b/packages/layout/package.json
@@ -23,6 +23,7 @@
     "build:esm": "tsc --module esnext --target es2015 --outDir ./es",
     "build:cjs": "tsc --module commonjs --target es5 --outDir ./lib",
     "build": "run-p build:cjs build:esm",
+    "build:watch": "yarn build:esm --w",
     "prebuild": "run-s lint clean",
     "precommit": "lint-staged"
   },
