feat: ✨ a few graphical changes, translations

--- a/examples/x6-app-draw/package.json
+++ b/examples/x6-app-draw/package.json
@@ -10,8 +10,8 @@
     "precommit": "lint-staged"
   },
   "dependencies": {
-    "@antv/x6": "^1.7.10",
-    "antd": "^4.4.2",
+    "@antv/x6": "^1.9.0",
+    "antd": "^4.10.0",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
     "@antv/x6-react-components": "^1.0.4"
@@ -21,6 +21,8 @@
     "@types/react": "^16.7.18",
     "@types/react-dom": "^16.0.11",
     "@types/react-test-renderer": "^16.0.3",
+    "@typescript-eslint/parser": "^4.11.1",
+    "@typescript-eslint/eslint-plugin": "^4.11.1",
     "@umijs/preset-react": "1.x",
     "@umijs/test": "^3.2.19",
     "eslint": "^7.16.0",
@@ -29,6 +31,7 @@
     "eslint-plugin-import": "^2.22.1",
     "eslint-plugin-jsx-a11y": "^6.2.3",
     "eslint-plugin-react": "^7.11.1",
+    "eslint-plugin-react-hooks": "^4.2.0",
     "lint-staged": "^10.5.3",
     "react-test-renderer": "^16.7.0",
     "tslint": "^6.1.3",
